# Resume-Parser-with-ATS

./: Dockerfile  render.yaml
Backend/: download_dataset.py  download_jd_dataset.py  main.py  pyproject.toml  render.yaml
Backend/api/: routes.py
Backend/data/: known_skills.json
Backend/models/: schemas.py
Backend/scripts/: build_skills_db.py
Backend/services/: extract.py  matcher.py  parser.py
Frontend/: package-lock.json  package.json
Frontend/src/: App.jsx  index.css
Frontend/src/Components/: Button.jsx  Drag.jsx  HeroSection.jsx  NavBar.jsx
Frontend/src/Pages/: Uploadpage.jsx
