[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "kagglehub>=1.0.2",
    "pandas>=3.0.3",
    "pypdf>=6.13.2",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "spacy>=3.8.13",
    "uvicorn>=0.49.0",
]
